--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.6.4",
+    "fs": "^0.0.1-security",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
