--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "export": "next export"
   },
   "dependencies": {
-    "firebase": "^9.6.4",
+    "@types/firebase": "^3.2.1",
+    "@types/luxon": "^2.0.9",
+    "firebase": "^9.6.6",
     "fs": "^0.0.1-security",
+    "luxon": "^2.3.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.2",
     "sass": "^1.49.0"
   },
   "devDependencies": {
