--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/luxon": "^2.0.9",
     "firebase": "^9.6.6",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "luxon": "^2.3.0",
     "next": "12.0.8",
     "react": "17.0.2",
