--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/firebase": "^3.2.1",
+    "@types/lodash": "^4.14.179",
     "@types/luxon": "^2.0.9",
     "firebase": "^9.6.6",
     "fs": "^0.0.1-security",
