--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.14.179",
     "@types/luxon": "^2.0.9",
     "firebase": "^9.6.6",
+    "framer-motion": "^6.3.10",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "luxon": "^2.3.0",
